Preparing for roundrobingScheduler v2. Fixing tests now