@@ -1,6 +1,5 @@
 package io.github.askmeagain.meshinery.core.e2e.base;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.askmeagain.meshinery.core.common.MeshineryProcessor;
 import io.github.askmeagain.meshinery.core.common.MeshinerySourceConnector;
 import io.github.askmeagain.meshinery.core.task.MeshineryTask;
@@ -11,25 +10,20 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.IntStream;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.ITEMS;
 import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.NUMBER_OF_TOPICS;
-import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.RESULT_MAP;
-import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.THREADS;
+import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.RESULT_MAP_0;
+import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.RESULT_MAP_1;
+import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.RESULT_MAP_2;
+import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.RESULT_MAP_3;
 import static io.github.askmeagain.meshinery.core.e2e.base.E2eTestApplication.TOPIC_PREFIX;
 
 @Slf4j
 @Configuration
 public class E2eTestConfiguration {
-
-  @Bean
-  @ConditionalOnMissingBean(ObjectMapper.class)
-  public ObjectMapper objectMapper() {
-    return new ObjectMapper();
-  }
 
   @Bean
   public MeshineryProcessor<TestContext, TestContext> testProcessor() {
@@ -38,7 +32,7 @@ public class E2eTestConfiguration {
 
   @Bean
   public ExecutorService executorService() {
-    return Executors.newFixedThreadPool(THREADS);
+    return Executors.newVirtualThreadPerTaskExecutor();
   }
 
   @Bean
@@ -51,21 +45,24 @@ public class E2eTestConfiguration {
         .toArray(String[]::new);
 
     return MeshineryTaskFactory.<String, TestContext>builder()
-        .outputSource(connector)
-        .inputSource(connector)
+        .connector(connector)
         .taskName("Task3Loop")
         .read(arr)
         .process(processor)
-        .process(((context) -> context.withIndex(context.getIndex() + 1)))
-        .process(((context) -> {
-          RESULT_MAP.get(context.getIndex()).add(context.getId());
-          if (context.getIndex() >= NUMBER_OF_TOPICS) {
-            log.warn("------ FINISHED %s ------".formatted(context.getId()));
+        .process(context -> context.withIndex(context.getIndex() + 1))
+        .process(context -> {
+          if (context.getIndex() == 0) {
+            RESULT_MAP_0.put(context.getId(), true);
+          } else if (context.getIndex() == 1) {
+            RESULT_MAP_1.put(context.getId(), true);
+          } else if (context.getIndex() == 2) {
+            RESULT_MAP_2.put(context.getId(), true);
           }
           return context;
-        }))
+        })
         .write(context -> {
           if (context.getIndex() >= NUMBER_OF_TOPICS) {
+            RESULT_MAP_3.put(context.getId(), true);
             return "Finished";
           }
           return TOPIC_PREFIX + context.getIndex();
@@ -85,6 +82,10 @@ public class E2eTestConfiguration {
         .inputSource(inputSource)
         .taskName("InputSpawner")
         .read("Doesnt_matter")
+        .process(x -> {
+          RESULT_MAP_0.put(x.getId(), true);
+          return x;
+        })
         .write(TOPIC_PREFIX + "0")
         .build();
   }
